xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__integer_key_specifier.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_xpath(\"? 1\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param {
                        name: Name(
                            "v0",
                        ),
                        type_: None,
                    },
                    Param {
                        name: Name(
                            "v1",
                        ),
                        type_: None,
                    },
                    Param {
                        name: Name(
                            "v2",
                        ),
                        type_: None,
                    },
                ],
                return_type: None,
                body: Spanned {
                    value: Lookup(
                        Lookup {
                            atom: Spanned {
                                value: Variable(
                                    Name(
                                        "v0",
                                    ),
                                ),
                                span: 0..0,
                            },
                            arg_atom: Spanned {
                                value: Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: 0..3,
                            },
                        },
                    ),
                    span: 0..3,
                },
            },
        ),
        span: 0..3,
    },
)
