xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__let_expr_with_add.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_expr_single(\"let $x := (1 + 2) return $x\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v0",
                ),
                var_expr: Spanned {
                    value: Binary(
                        Binary {
                            left: Spanned {
                                value: Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: 11..12,
                            },
                            op: Add,
                            right: Spanned {
                                value: Const(
                                    Integer(
                                        2,
                                    ),
                                ),
                                span: 15..16,
                            },
                        },
                    ),
                    span: 11..16,
                },
                return_expr: Spanned {
                    value: Atom(
                        Spanned {
                            value: Variable(
                                Name(
                                    "v0",
                                ),
                            ),
                            span: 25..27,
                        },
                    ),
                    span: 25..27,
                },
            },
        ),
        span: 0..27,
    },
)
