xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__named_function_ref.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_expr_single(\"my_function#2\")"
---
Ok(
    Spanned {
        value: Atom(
            Spanned {
                value: Const(
                    StaticFunctionReference(
                        StaticFunctionId(
                            0,
                        ),
                        None,
                    ),
                ),
                span: 0..13,
            },
        ),
        span: 0..13,
    },
)
